--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 }
 
 html {
-  background-color: #101114;
+  background-color: #f7f3f0;
 }
 
 @layer utilities {
@@ -18,12 +18,6 @@ html {
   }
   .podcast_grid {
     @apply grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4;
-  }
-  .right_sidebar {
-    @apply sticky right-0 top-0 flex w-[310px] flex-col  border-none bg-black-1 px-[30px] pt-8;
-  }
-  .left_sidebar {
-    @apply sticky left-0 top-0 flex w-fit flex-col  justify-between  border-none  bg-black-1 pt-8 text-white-1 max-md:hidden lg:w-[270px] lg:pl-8;
   }
   .generate_thumbnail {
     @apply mt-[30px] flex w-full max-w-[520px] flex-col justify-between gap-2 rounded-lg border border-black-6 bg-black-1 px-2.5 py-2 md:flex-row md:gap-0;
@@ -103,8 +97,8 @@ html {
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
 }
-.glassmorphism-black {
-  background: rgba(18, 18, 18, 0.64);
+.glassmorphism-player {
+  background: rgba(211, 202, 190, 0.64);
   backdrop-filter: blur(37px);
   -webkit-backdrop-filter: blur(37px);
 }
@@ -335,4 +329,33 @@ html {
 
 .abcjs-css-warning {
   display: none;
+}
+
+@keyframes swing {
+  0% {
+    transform: rotate(15deg);
+  }
+  25% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(-15deg);
+  }
+  75% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(15deg);
+  }
+}
+
+.metronome-bar {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  transform-origin: bottom center; /* Set the pivot point */
+}
+
+.swing {
+  animation: swing linear infinite;
 }
